Fix heading spacing

--- a/src/components/header/templates/styles.scss
+++ b/src/components/header/templates/styles.scss
@@ -46,6 +46,7 @@
         margin-top: 10px;
     }
     .heading {
+        display: block;
         border-bottom: none;
         line-height: 18px;
         letter-spacing: .05em;
@@ -86,6 +87,7 @@
         margin-top: 10px;
     }
     .heading {
+        display: block;
         border-bottom: none;
         line-height: 18px;
         letter-spacing: .05em;
@@ -105,7 +107,7 @@
     }
     .block-heading {
         display: block;
-        // margin-top: 5px;
+        margin-top: 5px;
     }
     // .block-cta {
     //     display: block;
@@ -123,6 +125,7 @@
         margin-top: 10px;
     }
     .heading {
+        display: block;
         border-bottom: none;
         line-height: 18px;
         letter-spacing: .05em;
